--- a/index.css
+++ b/index.css
@@ -1,18 +1,19 @@
 html{
     min-height: 100vh;
-    background: linear-gradient(180deg, rgb(165, 45, 45), rgb(230, 181, 169));
+    background: linear-gradient(180deg, rgb(165, 45, 45), rgb(54, 31, 25));
 
 }
 
 
 h1 {
 text-align: center;
-color: wheat;
+color: white;
 font-weight: bold;
 font-size: 90px;
 font-family: Luminari;
 text-decoration:underline;
 text-decoration-color: white;
+
 
 }
 
@@ -31,13 +32,44 @@ border-radius: 20px;
     border-style: groove;
     border-radius: 20px;
     border-color: black;
+    
 
 }
 
-#tacos{
+#tacos {
     position:absolute;
     top:50px;
     right: 10px;
+}
+
+#tacos:hover, #eggs:hover, #potato:hover,#hotDog:hover{
+transform: scale(1.06);
+transition: 0.75s;
+background: rgba(0,0,0,0.65);
+}
+
+.tacoHover{
+    position:absolute;
+    top:50px;
+    right: 10px;
+    width: 40px;
+    height: 250px;
+    background: rgba(0,0,0,0);
+    opacity:0;
+    transition: all 0.4s ease-in;
+   
+    
+    
+}
+
+.tacoHover:hover
+{
+    
+    opacity:1;
+    background: rgba(0,0,0,0);
+    transform: translate(-10%, -10%) rotateY(0deg);
+    color:#ffffff;
+    
 }
 
 #eggs{
@@ -61,7 +93,7 @@ h2{
     text-align: center;
     font-size: 25px;
     font-family: Luminari;
-    color: black;
+    color: white;
     
     
 }
